[package]
name = "mpc_algo_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.9", features = ["std"] }
curve25519-dalek = { version = "3", features = ["serde"] }
hex = "0.4"
hmac = { version = "0.11", features = ["std"] }
rand = "0.7"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
uuid = { version = "0.8", features = ["v4"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dependencies.bip32]
path = "deps/bip32-Ed25519-0.5.1"

[dependencies.ed25519-dalek]
# ver.2 (latest at 2024.01.18) has no struct PublicKey
version = "1"

[dependencies.mpc_sesman]
path = "../mpc_sesman"
